src/objects/DSCORGPKG__FieldMapping__c.object
<CustomObject>
    <fields>
        <fullName>DSCORGPKG__CriteriaField1APIName__c</fullName>
        <inlineHelpText>The API name of the first field to be used to match against.</inlineHelpText>
        <label>Criteria Field 1 API Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__CriteriaField1Value__c</fullName>
        <inlineHelpText>The value you wish to match on the object record for the first matching criteria.</inlineHelpText>
        <label>Criteria Field 1 Value</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__CriteriaField2APIName__c</fullName>
        <inlineHelpText>The API name of the second field to be used to match against.</inlineHelpText>
        <label>Criteria Field 2 API Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__CriteriaField2Value__c</fullName>
        <inlineHelpText>The value you wish to match on the object record for the second matching criteria.</inlineHelpText>
        <label>Criteria Field 2 Value</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__FieldName__c</fullName>
        <inlineHelpText>The API name of the field you wish to be updated with the new field value.</inlineHelpText>
        <label>Field API Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__NewFieldValue__c</fullName>
        <inlineHelpText>The value to change the field to when a match is found.</inlineHelpText>
        <label>New Field Value</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Object__c</fullName>
        <label>Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DiscoverOrg Field Mapping</label>
    <nameField>
        <displayFormat>FM-{00000}</displayFormat>
        <label>Mapping Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DiscoverOrg Field Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>